# ML-trading-bot

./: .gitignore  .gititgnore  README.md  ROADMAP.md  config.json  main.py  visualization_examples.py
nn/: data_handler.py  route.py  train.py
performance_data/: INFO.md
performance_data/generalizing_tsr_model/: logs.txt
preformance_data/generalizing_tsr_model/: description.md
preformance_data/specialized_tsr_model/: description.md  log.txt
src/: .gitignore  config.json  data_handler.py  head.py  main.py  model.py  requirements.txt  route.py  setup.py  test_nn.json  trade.py  train.py  train_nn.json
src/nn/: __init__.py  data_handler.py  requirements.txt  route.py  trade.py  train.py  visualizations.py
src/sentiment_model/: CLAUDE.md  __init__.py  tokenize_pipeline.py
src/sentiment_model/classify_model/: __init__.py
src/sentiment_model/processed_data/: data_statistics.json  test_tokenized.json  tokenizer_config.json  train_tokenized.json  validation_tokenized.json
src/sentiment_model/web-scraper/: CMakeLists.txt  chain.json  main.cpp  scraper.cpp  scraper.h
src/sentiment_model/web_scraper/: CMakeLists.txt  chain.txt  main.cpp  scraper.h
src/tests/sentiment_model/web_scraper/: CMakeLists.txt  README.md  main_functions_for_testing.cpp  test_helpers.h  test_main_functions.cpp  test_runner.cpp  test_scraper.cpp
src/tests/tsr_model/: README.md  __init__.py  conftest.py  pytest.ini  run_tests.py  test_data_pipeline.py  test_model.py  test_route.py  test_utils.py
src/tsr_model/: README.md  __init__.py  model.py  realtime_viz.py  requirements.txt  route.py  train.py  utils.py
web-scraper/: .gitignore
